tests/ui/parser/foreign-static-semantic-fail.stderr
error: incorrect `static` inside `extern` block
  --> $DIR/foreign-static-semantic-fail.rs:6:12
   |
LL | extern "C" {
   | ---------- `extern` blocks define existing foreign statics and statics inside of them cannot have a body
LL |     static X: u8 = 0;
   |            ^       - the invalid body
   |            |
   |            cannot have a body
   |
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: incorrect `static` inside `extern` block
  --> $DIR/foreign-static-semantic-fail.rs:7:16
   |
LL | extern "C" {
   | ---------- `extern` blocks define existing foreign statics and statics inside of them cannot have a body
LL |     static X: u8 = 0;
LL |     static mut Y: u8 = 0;
   |                ^       - the invalid body
   |                |
   |                cannot have a body
   |
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: aborting due to 2 previous errors

